minor text edits.

--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -3,11 +3,11 @@
 # Acknowledgements {-}
 We would like to thank the APH consortium, for giving us the opportunity to write this manual, by granting us one of the 2017 APH mental health research funds.
 
-We also thank the APH researchers, to whom we spoke during the project, for sharing their knowledge, experience and insights. We are also indebted to the researchers who contributed data, analyses scripts, and other materials that are presented in this manual.
+We also thank the APH researchers, to whom we spoke during the project, for sharing their knowledge, experience and insights. We are also indebted to the researchers who contributed data, scripts, and other materials that are presented in this manual.
 
-We particulary like to thank the project advisors, Prof. Dr. Heleen Riper and Prof. Dr. Johannes Smit, for their support and valuable input.
+We also like to thank the project advisors, Prof. Dr. Heleen Riper and Prof. Dr. Johannes Smit, for their support and valuable input.
 
-This manual was written in RMarkdown with [Bookdown](http://bookdown.org) [@R-bookdown_book]. We thank Yihui Xie for this wonderful package.
+This manual was written in [RMarkdown](https://rmarkdown.rstudio.com/) with [Bookdown](http://bookdown.org) [@R-bookdown_book]. We thank Yihui Xie for this wonderful package.
 
 *Jeroen Ruwaard, Lisa Kooistra \& Melissa Thong*
 
